--- a/index.html
+++ b/index.html
@@ -5,7 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 </head>
 <body>
+    <main>
+        <div class="container" id="display">
+            <!-- Content here -->
+          </div>
+          <div class="container" id="button-inputs">
+            <div class="row">
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="7"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="8"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="9"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="+"></div>
+            </div>
+              <div class="row">
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="4"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="5"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="6"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="-"></div>
+              </div>
+              <div class="row">
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="1"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="2"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="3"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="*"></div>
+              </div>
+              <div class="row">
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="0"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="."></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="+/-"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="/"></div>
+              </div>
+              <div class="row">
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="C"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="Del"></div>
+                <div class="col"><input class="btn btn-block btn-primary" type="button" value="="></div>
+              </div>
+            </div>
+    </main>
+
+    <script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </body>
 </html>
