--- a/index.html
+++ b/index.html
@@ -9,38 +9,41 @@
 </head>
 <body>
     <main>
-        <div class="container" id="display">
-            <!-- Content here -->
+        <div class="container" id="display-container">
+          <div id="calculator-input-display" class="calculator-display rtl-overflow"><span> </span>
           </div>
-          <div class="container" id="button-inputs">
+          <div id="calculator-evaluated-display" class="calculator-display rtl-overflow"><span> </span>
+          </div>          
+        </div>
+          <div class="container" id="button-contianer">
             <div class="row">
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="7"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="8"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="9"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="+"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="7"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="8"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="9"></div>
+                <div class="col" id="opbutton"><input class="btn btn-block btn-primary" type="button" value="+"></div>
             </div>
               <div class="row">
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="4"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="5"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="6"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="-"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="4"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="5"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="6"></div>
+                <div class="col" id="opbutton"><input class="btn btn-block btn-primary" type="button" value="-"></div>
               </div>
               <div class="row">
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="1"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="2"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="3"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="*"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="1"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="2"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="3"></div>
+                <div class="col" id="opbutton"><input class="btn btn-block btn-primary" type="button" value="*"></div>
               </div>
               <div class="row">
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="0"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="."></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="0"></div>
+                <div class="col" id="numbutton"><input class="btn btn-block btn-primary" type="button" value="."></div>
                 <div class="col"><input class="btn btn-block btn-primary" type="button" value="+/-"></div>
                 <div class="col"><input class="btn btn-block btn-primary" type="button" value="/"></div>
               </div>
               <div class="row">
                 <div class="col"><input class="btn btn-block btn-primary" type="button" value="C"></div>
                 <div class="col"><input class="btn btn-block btn-primary" type="button" value="Del"></div>
-                <div class="col"><input class="btn btn-block btn-primary" type="button" value="="></div>
+                <div class="col" id="calcresult"><input class="btn btn-block btn-primary" type="button" value="="></div>
               </div>
             </div>
     </main>
