fixed on input for expressions and long equation calculation

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <main>
         <div class="container" id="display-container">
-          <div id="calculator-input-display" class="calculator-display rtl-overflow"><span> </span>
+          <div id="calculator-evaluated-display" class="calculator-display rtl-overflow"><span>- </span>
           </div>
-          <div id="calculator-evaluated-display" class="calculator-display rtl-overflow"><span> </span>
+          <div id="calculator-input-display" class="calculator-display rtl-overflow"><span>-  </span>
           </div>          
         </div>
           <div class="container" id="button-contianer">
